# text2sql

backend/: .gitignore  README.md  app.py  config.py  middlewares.py  pyproject.toml
backend/controllers/: chat.py
backend/docker/: docker-compose.yaml
backend/models/: __init__.py  meta.py
backend/plugins/: embedding.py  es.py  qdrant.py
backend/plugins/agent/: __init__.py  models.py  nodes.py  prompts.py  schemas.py
backend/schemas/: __init__.py  chat.py
web/: README.md  package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts
web/src/: App.vue  style.css
web/src/lib/: result-display.test.ts  result-display.ts  sse.test.ts  sse.ts
web/src/services/: agent.ts
web/src/types/: agent.ts
