[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "aerich>=0.9.2",
    "aiomysql>=0.3.2",
    "cryptography>=48.0.0",
    "dashscope>=1.25.19",
    "elasticsearch[async]>=8,<9",
    "fastapi[standard]>=0.136.1",
    "jieba>=0.42.1",
    "langchain>=1.3.1",
    "langchain-community>=0.4.2",
    "langchain-openai>=1.2.2",
    "loguru>=0.7.3",
    "orjson>=3.11.9",
    "qdrant-client>=1.18.0",
    "tortoise-orm>=0.25.4",
    "tzdata>=2026.2",
]

[tool.aerich]
tortoise_orm = "config.TORTOISE_ORM_CONFIG"
location = "./migrations"
src_folder = "./."
